# PyAutoGuide

./: README.md  pyproject.toml
.github/workflows/: release.yml
examples/saucedemo/: login.py  main.py  manual_flow.py
experimental/algorithms/: ilish.py
src/pyautoguide/: box_array.py  box_array.pyi  shapes.py  workflow.py
src/pyautoscene/: __init__.py  _types.py  actions.py  box_array.py  box_array.pyi  constants.py  ocr.py  references.py  region.py  scene.py  session.py  shapes.py  utils.py  workflow.py
